--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -197,8 +197,7 @@
 .project_desc::-webkit-scrollbar-thumb {
   background: inherit;
   border-radius: 10px;
-  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
-    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .project_desc::-webkit-scrollbar-track {
@@ -281,8 +280,7 @@
 .ContributorList::-webkit-scrollbar-thumb {
   background: inherit;
   border-radius: 10px;
-  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
-    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .ContributorList::-webkit-scrollbar-track {
